# godot-playground

godot/: .gitignore  Battlefield.tscn  Bullet.tscn  HappySheep_Bouncing.png.import  Hud.tscn  Main.tscn  Mob.tscn  Player.tscn  Tilemap_Flat.png.import  Torch_Yellow.png.import  Tree.png.import  Warrior_Blue.png.import  export_presets.cfg  favicon.png.import  goblin.tscn  ground.tres  icon.png.import  logo.svg.import  lottery_machine.tscn  project.godot  rust.gdextension  tree.tscn  warrior.tscn
godot/Tiny Swords/Deco/: 01.png.import  02.png.import  03.png.import  04.png.import  (+15 more)
godot/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
godot/fonts/: Xolonium-Regular.ttf.import
godot/tilemaps/: Tilemap_Flat.png.import  ground.tres
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: alignment.rs  bullet.rs  enums.rs  footman.rs  goblin.rs  lib.rs  logger.rs  main_scene.rs  mob.rs  player.rs  pool.rs  runtime.rs
rust/src/actions/: Attack.rs  mod.rs
rust/src/ai/: behavior.rs  command.rs  mod.rs
rust/src/characters/: common.rs  goblin.rs  goblin_animation_tree.rs  mod.rs  warrior.rs
rust/src/dnd/: ability.rs  enums.rs  footman.rs  mod.rs
rust/src/interactable/: effect.rs  hit_box.rs  hurt_box.rs  mod.rs  navigator.rs  sight.rs  tree.rs
rust/src/tools/: weapon.rs
(+179 files in other folders)
