[package]
name = "dodge-the-creeps"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
log = "0.4.20"
tracing-appender = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
object-pool = "0.5.4"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext.git"
features = ["experimental-threads"]

[dependencies.godot-ffi]
git = "https://github.com/godot-rust/gdext.git"
