[package]
name = "dodge-the-creeps"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
log = "0.4.20"
tracing-appender = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
object-pool = "0.5.4"
bitflags = "2.4.2"
lazy_static = "1.4.0"
ctor = "0.2.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
actix = "0.13.3"
actix-rt = "2.9.0"
contracts = "0.6.3"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext.git"
features = ["experimental-threads", "experimental-godot-api"]

[target.'cfg(target_arch = "wasm32")'.dependencies.godot]
git = "https://github.com/godot-rust/gdext.git"
default-features = false
features = ["experimental-wasm"]

[dependencies.godot-ffi]
git = "https://github.com/godot-rust/gdext.git"
